<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/_60sdp"
    tools:context=".activites.SettingActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:gravity="center"
        android:text="@string/str_theme"
        android:textColor="#1E88E5"
        android:textSize="@dimen/_25sdp"
        tools:ignore="RtlSymmetry" />

    <RadioGroup
        android:id="@+id/rg_theme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:paddingStart="@dimen/_25sdp"
        android:paddingEnd="@dimen/_25sdp"
        android:paddingTop="@dimen/_10sdp">

        <RadioButton
            android:id="@+id/rb_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:text="@string/str_light_theme"
            android:textSize="@dimen/_15sdp" />

        <RadioButton
            android:id="@+id/rb_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:text="@string/str_dark_theme"
            android:textSize="@dimen/_15sdp" />

        <RadioButton
            android:id="@+id/rb_set_by_battery_saver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:text="@string/str_set_by_battery_saver"
            android:textSize="@dimen/_15sdp" />

    </RadioGroup>

  <info.hoang8f.widget.FButton
      android:id="@+id/btn_confirm"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:layout_marginTop="@dimen/_30sdp"
      android:layout_marginBottom="@dimen/_8sdp"
      android:paddingLeft="@dimen/_50sdp"
      android:paddingRight="@dimen/_50sdp"
      android:text="@string/str_confirm"
      android:textColor="@color/textColorPrimary"
      android:textSize="@dimen/_14sdp"
      app:cornerRadius="@dimen/dp_5"
      app:fButtonColor="@color/color_fbutton"
      app:shadowColor="@color/color_shadow_fbutton"
      app:shadowEnabled="true"
      app:shadowHeight="@dimen/dp_5" />
</LinearLayout>